--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -9,7 +10,9 @@
   <link rel="shortcut icon" href="img/favicon.png" />
   <title>Parolin Template</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Sonsie+One" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" type="text/css">
+  <link href="css/hover.css" rel="stylesheet" type="text/css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 
 </head>
@@ -25,18 +28,53 @@
   </header>
   <main>
     <div class="container">
-      <h1>Content</h1>
+      <div class="text-zone">
+        <h1 aria-label="Tic Tac Toe">
+          <span class="hvr-buzz-out" aria-hidden="true">T</span>
+          <span class="hvr-buzz-out" aria-hidden="true">i</span>
+          <span class="hvr-buzz-out" aria-hidden="true">c</span>
+          <span class="hvr-buzz-out" aria-hidden="true">-</span>
+          <span class="hvr-buzz-out" aria-hidden="true">T</span>
+          <span class="hvr-buzz-out" aria-hidden="true">a</span>
+          <span class="hvr-buzz-out" aria-hidden="true">c</span>
+          <span class="hvr-buzz-out" aria-hidden="true">-</span>
+          <span class="hvr-buzz-out" aria-hidden="true">T</span>
+          <span class="hvr-buzz-out" aria-hidden="true">o</span>
+          <span class="hvr-buzz-out" aria-hidden="true">e</span>
+        </h1>
+      </div>
       <div class="content space">
-        <i class="fas fa-user fa-2x"></i>
-        <span class="fa-layers fa-fw fa-2x">
-          <i class="fas fa-envelope"></i>
-          <span class="fa-layers-counter" style="background:Red">10</span>
-        </span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="board">
+          <div class="row top-row">
+            <div class="tile r1 c1" id="1"></div>
+            <div class="tile r1 c2" id="2"></div>
+            <div class="tile r1 c3" id="3"></div>
+          </div>
+          <div class="row middle-row">
+            <div class="tile r2 c1" id="4"></div>
+            <div class="tile r2 c2" id="5"></div>
+            <div class="tile r2 c3" id="6"></div>
+          </div>
+          <div class="row bottom-row">
+            <div class="tile r3 c1" id="7"></div>
+            <div class="tile r3 c2" id="8"></div>
+            <div class="tile r3 c3" id="9"></div>
+          </div>
+        </div>
       </div>
 
       <div class="aside space">
-        <p>Aside</p>
+        <div class="sidebar-header">
+          <h2 class='status-text'></h2>
+        </div>
+        <div class="score-board">
+          <h2 class='score-board-title'>Scoreboard</h2>
+          <p class='score score-player-name'><span>X</span><span>O</span></p>
+          <p class='score'><span class="score-x"></span><span class="score-o"></span></p>
+        </div>
+        <div class="button-frame">
+          <button type="button" class="play-again button-on" name="play-again">PLAY AGAIN</button>
+        </div>
       </div>
 
     </div>
@@ -58,4 +96,5 @@
     </div>
   </footer>
 </body>
+
 </html>
