--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="HandheldFriendly" content="True">
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
-  <link rel="shortcut icon" href="img/favicon.png" />
+  <link rel="shortcut icon" href="img/favicon.ico" />
   <title>Tic Tac Toe</title>
   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Sonsie+One|Open+Sans:300,400,600|Libre+Franklin" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -106,5 +106,4 @@
     </div>
   </footer>
 </body>
-
 </html>
