--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="css/hover.css" rel="stylesheet" type="text/css">
   <link href="css/board.css" rel="stylesheet" type="text/css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script defer src="js/index.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -41,7 +42,7 @@
           <span class="hvr-buzz-out" aria-hidden="true">e</span>
         </h1>
       </div>
-      <div class="content space">
+      <div class="content">
         <div class="board">
           <div class="row top-row">
             <div class="tile r1 c1" id="1"></div>
@@ -61,14 +62,22 @@
         </div>
       </div>
 
-      <div class="aside space">
-        <div class="sidebar-header">
+      <div class="aside">
+        <div class="score-board-header">
           <h2 class='status-text'></h2>
         </div>
         <div class="score-board">
           <h2 class='score-board-title'>SCOREBOARD</h2>
-          <p class='score score-player-name'><span>X</span><span>Ties</span><span>O</span></p>
-          <p class='score'><span class="score-x"></span><span class="score-ties"></span><span class="score-o"></span></p>
+          <p class='score score-player-name'>
+            <span>X</span>
+            <span>ties</span>
+            <span>O</span>
+          </p>
+          <p class='score'>
+            <span class="score-x"></span>
+            <span class="score-ties"></span>
+            <span class="score-o"></span>
+          </p>
         </div>
         <div class="button-frame">
           <button type="button" class="play-again button-on" name="play-again">PLAY AGAIN</button>
@@ -82,10 +91,13 @@
       <a href="https://github.com/gustavoparolin" title="Source code at GitHub" target="_blank"><i class="fab fa-github fa-2x"></i></a>
     </span>
     <span class="social">
-      <a href="https://www.facebook.com/gustavo.parolin" title="Social perfil at Facebook" target="_blank"><i class="fab fa-facebook fa-2x"></i></a>
+      <a href="https://www.facebook.com/gustavo.parolin" title="Social perfil at Facebook" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
     </span>
     <span class="social">
       <a href="https://www.linkedin.com/in/gustavo-parolin/" title="Professional perfil at LinkedIn" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+    </span>
+    <span class="social">
+      <a href="http://www.parolin.net/" title="Portfolio" target="_blank"><i class="fas fa-user-circle fa-2x"></i></a>
     </span>
     <div class="credits">
       <span class="credit">
